@@ -464,10 +464,10 @@ Image::alpha_blend (shared_ptr<const Image> other, Position<int> position)
 			uint8_t* op = other->data()[0] + oy * other->stride()[0];
 			for (int tx = start_tx, ox = start_ox; tx < size().width && ox < other->size().width; ++tx, ++ox) {
 				float const alpha = float (op[3]) / 255;
-				/* Blend high bytes */
-				tp[1] = op[0] * alpha + tp[1] * (1 - alpha);
+				/* Blend high bytes; the RGBA in op appears to be BGRA */
+				tp[1] = op[2] * alpha + tp[1] * (1 - alpha);
 				tp[3] = op[1] * alpha + tp[3] * (1 - alpha);
-				tp[5] = op[2] * alpha + tp[5] * (1 - alpha);
+				tp[5] = op[0] * alpha + tp[5] * (1 - alpha);
 
 				tp += this_bpp;
 				op += other_bpp;
