@@ -35,9 +35,16 @@ using boost::lexical_cast;
 
 std::string const SubRipContent::font_id = "font";
 
+int const SubRipContentProperty::SUBTITLE_COLOUR = 300;
+int const SubRipContentProperty::SUBTITLE_OUTLINE = 301;
+int const SubRipContentProperty::SUBTITLE_OUTLINE_COLOUR = 302;
+
 SubRipContent::SubRipContent (shared_ptr<const Film> film, boost::filesystem::path path)
 	: Content (film, path)
 	, SubtitleContent (film, path)
+	, _colour (255, 255, 255)
+	, _outline (false)
+	, _outline_colour (0, 0, 0)
 {
 
 }
@@ -47,6 +54,17 @@ SubRipContent::SubRipContent (shared_ptr<const Film> film, cxml::ConstNodePtr no
 	, SubtitleContent (film, node, version)
 	, _length (node->number_child<ContentTime::Type> ("Length"))
 	, _frame_rate (node->optional_number_child<double>("SubtitleFrameRate"))
+	, _colour (
+		node->optional_number_child<int>("Red").get_value_or(255),
+		node->optional_number_child<int>("Green").get_value_or(255),
+		node->optional_number_child<int>("Blue").get_value_or(255)
+		)
+	, _outline (node->optional_bool_child("Outline").get_value_or(false))
+	, _outline_colour (
+		node->optional_number_child<int>("OutlineRed").get_value_or(255),
+		node->optional_number_child<int>("OutlineGreen").get_value_or(255),
+		node->optional_number_child<int>("OutlineBlue").get_value_or(255)
+		)
 {
 
 }
@@ -84,6 +102,13 @@ SubRipContent::as_xml (xmlpp::Node* node) const
 	Content::as_xml (node);
 	SubtitleContent::as_xml (node);
 	node->add_child("Length")->add_child_text (raw_convert<string> (_length.get ()));
+	node->add_child("Red")->add_child_text (raw_convert<string> (_colour.r));
+	node->add_child("Green")->add_child_text (raw_convert<string> (_colour.g));
+	node->add_child("Blue")->add_child_text (raw_convert<string> (_colour.b));
+	node->add_child("Outline")->add_child_text (raw_convert<string> (_outline));
+	node->add_child("OutlineRed")->add_child_text (raw_convert<string> (_outline_colour.r));
+	node->add_child("OutlineGreen")->add_child_text (raw_convert<string> (_outline_colour.g));
+	node->add_child("OutlineBlue")->add_child_text (raw_convert<string> (_outline_colour.b));
 }
 
 DCPTime
@@ -118,4 +143,49 @@ SubRipContent::subtitle_video_frame_rate () const
 	   prepared for any concurrent video content.
 	*/
 	return film()->active_frame_rate_change(position()).source;
+}
+
+void
+SubRipContent::set_colour (dcp::Colour colour)
+{
+	{
+		boost::mutex::scoped_lock lm (_mutex);
+		if (_colour == colour) {
+			return;
+		}
+
+		_colour = colour;
+	}
+
+	signal_changed (SubRipContentProperty::SUBTITLE_COLOUR);
+}
+
+void
+SubRipContent::set_outline (bool o)
+{
+	{
+		boost::mutex::scoped_lock lm (_mutex);
+		if (_outline == o) {
+			return;
+		}
+
+		_outline = o;
+	}
+
+	signal_changed (SubRipContentProperty::SUBTITLE_OUTLINE);
+}
+
+void
+SubRipContent::set_outline_colour (dcp::Colour colour)
+{
+	{
+		boost::mutex::scoped_lock lm (_mutex);
+		if (_outline_colour == colour) {
+			return;
+		}
+
+		_outline_colour = colour;
+	}
+
+	signal_changed (SubRipContentProperty::SUBTITLE_OUTLINE_COLOUR);
 }
