@@ -1,3 +1,7 @@
+2015-11-08  Carl Hetherington  <cth@carlh.net>
+
+	* Allow configuration of SubRip subtitle colour and outlines.
+
 2015-11-06  Carl Hetherington  <cth@carlh.net>
 
 	* Sort cinemas in KDM dialog and standalone creator (#726).
